# loadster

./: Cargo.toml  README.md  baseline.json  loadster-report.json
.cargo-husky/hooks/: pre-push
.github/workflows/: ci.yml
scripts/: test.sh
src/: main.rs
tests/: integration_test.rs
