[package]
name = "loadster"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "loadster"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = "0.12.23"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
tokio-test = "0.4"
cargo-husky = "1"

[profile.test]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1
strip = true